# raven-checkers

./: .flake8  .gitignore  LICENSE  Makefile  README.md  aboutbox.py  alphabetacontroller.py  autoscrollbar.py  baseline_search_metrics.csv  boardview.py  centeredwindow.py  checkers.kpf  checkers.py  command.py  composite.py  controller.py  creoleparser.py  crossboard.py  csp.py  document.py  evaluators.py  formation.py  gamemanager.py  gamepersist.py  games.py  globalconst.py  goal.py  goalcrossboard.py  goalevaluator.py  goalformation.py  goalthink.py  hyperlinkmgr.py  launcher.py  longdyke.py  longdyke_eval.py  main.py  mainframe.py  move.py  observer.py  onek_eval.py  (+22 more)
.github/workflows/: build-app.yml  build-test.yml
ai/: algorithm_config.py  games.py  search.py  utils.py
base/: command.py  controller.py  move.py  observer.py  player.py
benchmarks/: baseline_metrics.py
game/: checkers.py  gamemanager.py
gui/: aboutbox.py  alphabetacontroller.py  autoscrollbar.py  boardview.py  centeredwindow.py  filelist.py  hyperlinkmgr.py  playercontroller.py  prefdlg.py  setupboard.py  tooltip.py
parsing/: PDN.py  creole.py  creoleparser.py  gamepersist.py  migrate.py  rules.py  textserialize.py
prompts_and_support_files/: FEN_description.txt  PDN_generation.txt  PDN_grammar.txt  checkerboard_interpretation.txt
tests/: sample.pdn  test_PDN.py  test_checkers.py  test_checkers_micro.py  test_migrate.py  test_mirror_symmetry_perft.py  test_non_max_capture_search.py  test_roundtrip_make_undo.py  test_search_stats.py  testcb.py
training/: german_open_2004.pdn  sample.rcf  tinsley.pdn
training/ElementaryKingEndings/: 2Kings-v-1King-Draw.rcf  2Kings-v-1King-Win.rcf  2kings-v-1king-win.rcf  3Kings-v-2Kings-OppDblCorners.rcf  3Kings-v-2Kings-SameDblCorner.rcf  3Kings-v-2Kings-SameSglCorner.rcf  3kings-v-2kings-oppdblcorners.rcf  3kings-v-2kings-samesglcorner.rcf
training/Key Endgames/: FirstPosition.rcf  FirstPositionWithTheManOn4.rcf  FirstPositionWithTheManOn4_Alternative.rcf  FirstPositionWithoutTheOpposition.rcf  FirstPositionWithoutTheOpposition_Alternative.rcf  FirstPosition_AlternativeA.rcf  FirstPosition_AlternativeB1.rcf  FirstPosition_AlternativeB2.rcf  FirstPosition_AlternativeB3.rcf  FirstPosition_AlternativeC.rcf  FirstPosition_AlternativeD1.rcf  FirstPosition_AlternativeD2.rcf  Payne's Single-Corner Win for Black.rcf  Payne's Single-Corner Win for White.rcf
training/KeyEndgames/: FirstPosition.rcf  FirstPosition.xml  FirstPositionWithTheManOn4.rcf  FirstPositionWithoutTheOpposition.rcf  Payne's Single-Corner Win for Black.rcf  Payne's Single-Corner Win for White.rcf  payne's single-corner win for black.rcf  payne's single-corner win for white.rcf
training/Openings/: Cross.rcf  Cross.xml  Glasgow.rcf  (+3 more)
util/: globalconst.py
(+25 files in other folders)
