[project]
name = "Raven Checkers"
version = "0.6"
description = "Checkers board game engine and GUI with training features"
authors = [
    {name = "Brandon Corfman", email = "bcorfman@fastmail.fm"},
]
dependencies = [
    "charset-normalizer>=2.1.1",
    "pyparsing>=3.1.1",
]
requires-python = ">=3.9"
license = {text = "MIT"}
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
cli = [
    "ipython>=8.5.0",
]
dev = [
    "flake8>=5.0.4",
    "pytest>=7.1.3",
]
