[project]
name = "raven-checkers"
version = "0.7"
description = "Checkers board game engine and GUI with training features"
authors = [
    {name = "Brandon Corfman", email = "bcorfman@fastmail.fm"},
]
dependencies = [
    "charset-normalizer>=2.1.1",
    "pyparsing>=3.1.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
cli = [
    "ipython>=8.5.0",
]
dev = [
    "flake8>=5.0.4",
    "pytest>=7.1.3",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
]
