[project]
name = "raven-checkers"
version = "0.7"
description = "Checkers board game engine and GUI with training features"
authors = [
    {name = "Brandon Corfman", email = "bcorfman@fastmail.fm"},
]
dependencies = [
    "charset-normalizer>=2.1.1",
    "pyparsing>=3.1.1",
]
requires-python = ">=3.12"
license = {text = "MIT"}
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
cli = [
    "ipython>=8.5.0",
]
dev = [
    "flake8>=7.3.0",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.12.0",
    "uv>=0.7.16",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 120
fix = true
target-version = "py312"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
extend-fixable = ["E", "F", "UP", "B", "SIM", "I"]

# Enable flake8-tidy-imports rules (TID*) so that banned-api violations are enforced
extend-select = ["TID"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"builtins.isinstance".msg = "Avoid isinstance; design clear interfaces instead."
"builtins.hasattr".msg = "Avoid hasattr runtime checks; use explicit interfaces."
"builtins.getattr".msg = "Avoid getattr runtime checks; use explicit interfaces."
